--- a/assets/style.css
+++ b/assets/style.css
@@ -7,4 +7,11 @@ footer{
     color: rgb(255, 255, 255);
     position: fixed;
     bottom: 0;
+    width: 100%;
+    height: 2rem;
+}
+
+footer p{
+    text-align: center;
+    font-size: 0.8rem;
 }
