--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,20 @@ body{
     font-family: Bai Jamjuree;
 }
 
+#container{
+    display: flex;
+}
+
+
+
+
+
+
+
+
+
+
+
 footer{
     background-color: black ;
     color: rgb(255, 255, 255);
