--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 }
 
 .cartao{
-    /*margin: 1rem 1rem;*/
+    margin: 1rem 1rem;
     background-color: #8b3378;
     height: 20rem;
     flex-grow: 1;
