--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 
 .cartao__conteudo{
     text-align: center;
-    background-color: rgb(223, 134, 223) ;
+    /*background-color: rgb(223, 134, 223) ; */
     height: 100%;
 }
 
