--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ body{
 
 .cartao__conteudo h3{
     background-color: rgb(183, 107, 253);
+    text-align: left;
+    padding: 0.5rem;
+    position: absolute;
+    margin: 0.6rem;
+    border-radius: 0.6rem;
+    font-size: 1.5vw;
 }
 
 
