--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+:root {
+    --text-color: rgb(183, 107, 253);
+    --card-front-color: #144480;
+    --card-back-color: #00F4BF;
+}
 body{
     background: url("img/Fundo\ rosa.avif")
     font-family: Bai Jamjuree;
@@ -22,7 +27,7 @@ body{
 }
 
 .cartao__conteudo h3{
-    background-color: rgb(183, 107, 253);
+    color: var(--text-color)
     text-align: left;
     padding: 0.5rem;
     position: absolute;
