--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     --card-back-color: #00F4BF;
 }
 body{
-    background: url("img/Fundo\ rosa.avif")
+    background: url("img/Fundo rosa.avif")
     font-family: Bai Jamjuree;
 }
 
