--- a/style.css
+++ b/style.css
@@ -36,10 +36,13 @@ body{
     font-size: 1.5vw;
 }
 
-.cartao__conteudo__pergunta {
-    color: var(--text-color);
+.cartao__co nteudo__pergunta {
+    color:var(--text-color);
 }
 
+.cartao__conteudo__resposta {
+    color: var(--card-back-color);
+}
 
 
 
