--- a/style.css
+++ b/style.css
@@ -36,12 +36,14 @@ body{
     font-size: 1.5vw;
 }
 
-.cartao__co nteudo__pergunta {
+.cartao__conteudo__pergunta p {
     color:var(--text-color);
+    font-weight: 500;
 }
 
-.cartao__conteudo__resposta {
+.cartao__conteudo__resposta p {
     color: var(--card-back-color);
+    font-weight: 700;
 }
 
 
