--- a/style.css
+++ b/style.css
@@ -1,18 +1,19 @@
 :root {
-    --text-color: rgb(183, 107, 253);
+    --text-color: rgb(215, 177, 250);
     --card-front-color: #8b3378;
-    --card-back-color: #fc056c;
+    --card-back-color: #f5a9c9;
 }
 body{
-    background: url("img/Fundo rosa.avif")
+    background: url('img/Fundo rosa.avif')
     font-family: Bai Jamjuree;
 }
 
 #container{
+    display: flex; /*Elementos dispostos em linha*/
     display: flex;
 }
 
-.cartao{
+.cartao {
     margin: 1rem 1rem;
     height: 20rem;
     flex-grow: 1;
