--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background: url('./img/fundo\ rosa.avif');
+    background: url('./img/fundo.avif');
     font-family: Bai Jamjuree;
 }
 
