--- a/style.css
+++ b/style.css
@@ -29,13 +29,14 @@ body {
 }
 
 .cartao__conteudo h3{
-    color: var(--text-color)
-    text-align: left;
+    color: var(--text-color);
+    
+text-align: left;
     padding: 0.5rem;
     position: absolute;
     margin: 0.6rem;
     border-radius: 0.6rem;
-    font-size: 1.5vw;
+    font-size: 1.5rem;
 }
 
 .cartao__conteudo__pergunta p {
