--- a/style.css
+++ b/style.css
@@ -18,28 +18,34 @@ body {
     margin: 1rem 1rem;
     height: 20rem;
     flex-grow: 1;
-    flex-basis: calc(33% - 6rem)
+    flex-basis: calc(33% - 6rem);
 }
 
 .cartao__conteudo {
     background-color: var(--card-front-color);
     text-align: center;
-    /*background-color: rgb(223, 134, 223) ; */
+    /* background-color: aquamarine; */
     height: 100%;
 }
 
 .cartao__conteudo h3 {
     color: var(--text-color);
+    border: 1px solid var(--text-color);
     text-align: left;
     padding: 0.5rem;
     position: absolute;
     margin: 0.6rem;
     border-radius: 0.6rem;
-    font-size: 1.5rem;
+    font-size: 1vw;
+}
+
+.cartao__conteudo p {
+    margin-top: 1rem;
+    padding: 2rem;
 }
 
 .cartao__conteudo__pergunta p {
-    color:var(--text-color);
+    color: var(--text-color);
     font-weight: 500;
 }
 
@@ -47,6 +53,7 @@ body {
     color: var(--card-back-color);
     font-weight: 700;
 }
+
 
 
 
