--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-    --text-color: rgb(215, 177, 250);
-    --card-front-color: #8b3378;
+    --text-color: rgb(104, 63, 143);
+    --card-front-color: #f18bdb;
     --card-back-color: #f5a9c9;
 }
 
