--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
-    --text-color: rgb(104, 63, 143);
-    --card-front-color: #f18bdb;
+    --text-color: rgb(195, 155, 231);
+    --card-front-color: #8a2975;
     --card-back-color: #f5a9c9;
 }
 
