--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root {
     --text-color: rgb(195, 155, 231);
-    --card-front-color: #8a2975;
+    --card-front-color: #70225f;
     --card-back-color: #f5a9c9;
 }
 
