--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ body {
     text-align: center;
     /* background-color: aquamarine; */
     height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 300ms
 }
 
 .cartao__conteudo h3 {
@@ -53,6 +55,23 @@ body {
     color: var(--card-back-color);
     font-weight: 700;
 }
+
+.cartao:hover .cartao__conteudo{
+    transform: rotateY(180deg);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
