--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
     margin: 0.6rem;
     border-radius: 0.6rem;
     font-size: 1vw;
+    backface-visibility: hidden;
 }
 
 .cartao__conteudo p {
@@ -60,7 +61,10 @@ body {
     transform: rotateY(180deg);
 }
 
-
+.cartao__conteudo__pergunta,
+.cartao__conteudo__resposta{
+    backface-visibility: hidden;
+}
 
 
 
