--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body {
 .cartao__conteudo__pergunta,
 .cartao__conteudo__resposta{
     backface-visibility: hidden;
+    position: absolute;
 }
 
 .cartao__conteudo__resposta{
