--- a/style.css
+++ b/style.css
@@ -65,6 +65,8 @@ body {
 .cartao__conteudo__resposta{
     backface-visibility: hidden;
     position: absolute;
+    height: 100%;
+    width: 100%;
 }
 
 .cartao__conteudo__resposta{
