--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     display: flex; /*Elementos dispostos em linha*/
     flex-wrap: wrap;
     justify-content: space-between;
-    padding: 4rem
+    padding: 4rem;
     
 }
 
@@ -74,7 +74,7 @@ body {
 }
 
 .cartao__conteudo__resposta{
-    transform: rotateY(180deg)
+    transform: rotateY(180deg);
 }
 
 
