--- a/style.css
+++ b/style.css
@@ -76,17 +76,8 @@ body {
 
 .cartao__conteudo__resposta{
     transform: rotateY(180deg);
+    background-color: rgba(112, 34, 82, 0.2)
 }
-
-
-
-
-
-
-
-
-
-
 
 
 
