--- a/style.css
+++ b/style.css
@@ -72,11 +72,13 @@ body {
     position: absolute;
     height: 100%;
     width: 100%;
+    box-sizing: border-box;
 }
 
 .cartao__conteudo__resposta{
     transform: rotateY(180deg);
-    background-color: rgba(245, 201, 201, 0.5)
+    background-color: rgba(245, 201, 201, 0.5);
+    border: 4px solid var(--card-front-color);
 }
 
 
