--- a/style.css
+++ b/style.css
@@ -99,3 +99,25 @@ footer p {
     font-size: 0.7rem;
     margin-top: 0.5rem;
 }
+
+
+
+@media(max-width: 560px){
+    body{
+        background: url('img/fundo.avif');
+    }
+
+
+    .cartao{
+        flex: 1 0 calc(100% - 1 rem)
+    }
+
+    .cartao__conteudo h3 {
+        font-size: 3vw;
+    }
+
+.cartao__conteudo p {
+        font-size: 3.8vw;
+}
+
+}
