--- a/style.css
+++ b/style.css
@@ -100,24 +100,21 @@ footer p {
     margin-top: 0.5rem;
 }
 
-
-
-@media(max-width: 560px){
-    body{
-        background: url('img/fundo.avif');
+@media (max-width: 560px) {
+    
+    body {
+        background: url('img/bg-mobile.webp'), no-repeat cover;
     }
 
-
-    .cartao{
-        flex: 1 0 calc(100% - 1 rem)
+    .cartao {
+        flex: 1 0 calc(100% - 1rem)
     }
 
     .cartao__conteudo h3 {
         font-size: 3vw;
     }
 
-.cartao__conteudo p {
+    .cartao__conteudo p {
         font-size: 3.8vw;
-}
-
+    }
 }
