--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ footer p {
 @media (max-width: 560px) {
     
     body {
-        background: url('img/bg-mobile.webp'), no-repeat cover;
+        background: url('img/bg-mobile.webp.pink.jpg'), no-repeat cover;
     }
 
     .cartao {
